fix horizontal scroll issues in android

--- a/src/app.css
+++ b/src/app.css
@@ -131,7 +131,7 @@ mjx-container[jax="SVG"][display="true"] {
 
 .prose :is(pre)::-webkit-scrollbar,
 mjx-container::-webkit-scrollbar {
-	height: 5px;
+	height: 0.2rem;
 }
 
 .prose :is(pre)::-webkit-scrollbar-track,
@@ -147,9 +147,12 @@ mjx-container::-webkit-scrollbar-thumb {
 
 .prose blockquote {
 	border-left: 0.2rem solid var(--border);
+	box-sizing: border-box;
 	margin-inline: 0;
 	padding: 1rem 1rem 1rem 2rem;
 	background-color: var(--theme-block-quote);
+	width: 100%;
+	overflow-wrap: break-word;
 }
 
 .prose :is(h2, h3) {
@@ -214,10 +217,21 @@ h3 {
 	color: var(--theme-color-base);
 	font-style: italic;
 	text-decoration-style: dotted;
+	min-width: 80%;
+	max-width: 100%;
 }
 
 .prose a:hover {
 	text-decoration-style: solid;
+}
+
+.prose li > a {
+	box-sizing: border-box;
+	display: block;
+	width: 0px;
+	min-width: 100%;
+	/* max-width: 100%; */
+	overflow-wrap: break-word;
 }
 
 .prose :is(pre) {
